@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.redisson</groupId>
         <artifactId>redisson-hibernate</artifactId>
-        <version>3.45.2-SNAPSHOT</version>
+        <version>4.3.1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -53,17 +53,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                        <forkCount>2</forkCount>
-                        <reuseForks>true</reuseForks>
-                        <argLine>
-                           ${argLine}
-                           --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                           --add-opens=java.base/java.util=ALL-UNNAMED
-                           -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
-                        </argLine>
-                    </configuration>
+                <configuration>
+                    <forkCount>2</forkCount>
+                </configuration>
             </plugin>
 
             <plugin>
